# badintentions

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
badintentions/: .gitignore  Dockerfile  README.md
badintentions/chaos_auditor/: __init__.py  cli.py
badintentions/chaos_auditor/defender/: monitor.py
badintentions/chaos_auditor/engine/: scheduler.py
badintentions/chaos_auditor/recon/: surface_analyzer.py
badintentions/chaos_auditor/vectors/: __init__.py  application.py  infrastructure.py  middleware.py
badintentions/docs/: architecture.md
badintentions/tests/: test_vectors.py
chaos_auditor/: __init__.py  __main__.py  cli.py  config.py
chaos_auditor/defender/: __init__.py
chaos_auditor/engine/: __init__.py  executor.py  scheduler.py
chaos_auditor/recon/: __init__.py  dependency_audit.py  repo_mapper.py  surface_analyzer.py
chaos_auditor/reporting/: __init__.py  report.py
chaos_auditor/scenarios/: __init__.py  command_safety.py  content_scanning.py  file_access.py  injection_defense.py  interpreter_evasion.py  secret_detection.py
chaos_auditor/vectors/: __init__.py  application.py  infrastructure.py  middleware.py
docs/: phases.md
docs/vectors/: application.md  infrastructure.md  middleware.md
tests/: __init__.py  test_cli.py  test_config.py  test_defender.py  test_engine.py  test_recon.py  test_reporting.py  test_vectors.py
tests/scenarios/: __init__.py  test_command_safety.py  test_content_scanning.py  test_file_access.py  test_injection_defense.py  test_interpreter_evasion.py  test_secret_detection.py
(+1 files in other folders)
