[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaos-security-auditor"
version = "0.1.0"
description = "Chaos Security Auditor — an AI-driven framework for adversarial security testing in sandboxed environments."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "CSA Team" },
]
keywords = ["security", "chaos-engineering", "auditing", "penetration-testing"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
csa = "chaos_auditor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["chaos_auditor"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
